# seagull-messenger

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  run_as_user.sh
cmake/: DownloadUserver.cmake
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
docs/: api.md  database.md  run.md
postgresql/data/: initial_data.sql
postgresql/schemas/: db_1.sql
src/: add_user_to_chat_handler.cpp  add_user_to_chat_handler.hpp  create_group_chat_handler.cpp  create_group_chat_handler.hpp  edit_message_handler.cpp  edit_message_handler.hpp  get_chat_info_handler.cpp  get_chat_info_handler.hpp  get_chats_handler.cpp  get_chats_handler.hpp  get_messages_handler.cpp  get_messages_handler.hpp  get_user_profile_handler.cpp  get_user_profile_handler.hpp  greeting.cpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  hello_postgres.cpp  leave_chat_handler.cpp  leave_chat_handler.hpp  login_handler.cpp  login_handler.hpp  main.cpp  register_handler.cpp  register_handler.hpp  remove_user_from_chat_handler.cpp  remove_user_from_chat_handler.hpp  search_users_handler.cpp  search_users_handler.hpp  send_message_handler.cpp  send_message_handler.hpp  update_chat_handler.cpp  update_chat_handler.hpp  update_user_handler.cpp  update_user_handler.hpp  utils_handler.cpp  utils_handler.hpp
tests/: conftest.py  test_api.py
